--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@nestjs/common": "^10",
     "@nestjs/core": "^10",
+    "@nestjs/schedule": "^3.0.1",
     "@nestjs/platform-express": "^10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
